# SafePhysicsEngine

./: .gitignore  CMakeLists.txt  SafePhysicsEngine.sln  main.cpp
PluginManager/: CMakeLists.txt  IPlugin.cpp  IPlugin.h  PluginHandle.cpp  PluginHandle.h  PluginManager.vcxproj  PluginManager.vcxproj.filters
PluginManager/x64/Debug/: PluginManager.dll.recipe  PluginManager.ilk  vc143.idb
PluginManager/x64/Debug/PluginManager.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PluginTest/: CMakeLists.txt  PluginTest.cpp  PluginTest.h  PluginTest.vcxproj  PluginTest.vcxproj.filters
PluginTest/x64/Debug/: PluginTest.dll.recipe  PluginTest.ilk  vc143.idb
PluginTest/x64/Debug/PluginTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PluginTest.lastbuildstate  (+3 more)
SafeCollisionModule/: CMakeLists.txt  SafeCollisionModule.cpp  SafeCollisionModule.h
SafeEngineCore/: CMakeLists.txt  World.cpp  World.h
SafeEngineCore/Objects/SafeObject/: SafeObject.cpp  SafeObject.h
SafeEngineCore/Objects/SafeSphere/: SafeSphere.cpp  SafeSphere.h
SafeModule/: CMakeLists.txt  SafeModule.cpp  SafeModule.h
SafeModuleManager/: CMakeLists.txt  SafeModuleManager.cpp  SafeModuleManager.h
SafePhysicsEngine/: CMakeLists.txt  SafePhysicsEngine.cpp  SafePhysicsEngine.vcxproj  SafePhysicsEngine.vcxproj.filters
SafePhysicsEngine/x64/Debug/: SafePhysicsEngine.exe.recipe  SafePhysicsEngine.ilk  vc143.idb
x64/Debug/: PluginManager.idb  PluginManager.lib
(+6 files in other folders)
